Add map, with data streamed from CSV

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -60,9 +60,10 @@
 /* Main
    ========================================================================== */
 
- @import "core/base";
- @import "core/typography";
- @import "core/utilities";
- @import "core/prime-nav";
- @import "core/footer";
- @import "core/inpages";
+@import "core/base";
+@import "core/typography";
+@import "core/utilities";
+@import "core/prime-nav";
+@import "core/footer";
+@import "core/map";
+@import "core/inpages";
